--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -26,17 +26,17 @@ resources:
 
 ## Cloud Pak for Data
 - argocd/operators/ibm-cpd-scheduling-operator.yaml
-#- argocd/instances/ibm-cpd-scheduling-instance.yaml
+- argocd/instances/ibm-cpd-scheduling-instance.yaml
 - argocd/operators/ibm-cpd-platform-operator.yaml
 - argocd/instances/ibm-cpd-instance.yaml
 - argocd/operators/ibm-cpd-ws-operator.yaml
-#- argocd/operators/ibm-cpd-wos-operator.yaml
+- argocd/operators/ibm-cpd-wos-operator.yaml
 - argocd/instances/ibm-cpd-ws-instance.yaml
-#- argocd/instances/ibm-cpd-wos-instance.yaml
-#- argocd/operators/ibm-cpd-wkc-operator.yaml
-#- argocd/instances/ibm-cpd-wkc-instance.yaml
-#- argocd/operators/ibm-cpd-ds-operator.yaml
-#- argocd/instances/ibm-cpd-ds-instance.yaml
+- argocd/instances/ibm-cpd-wos-instance.yaml
+- argocd/operators/ibm-cpd-wkc-operator.yaml
+- argocd/instances/ibm-cpd-wkc-instance.yaml
+- argocd/operators/ibm-cpd-ds-operator.yaml
+- argocd/instances/ibm-cpd-ds-instance.yaml
 #- argocd/operators/ibm-cpd-aespark-operator.yaml
 #- argocd/instances/ibm-cpd-aespark-instance.yaml
 
